# beancount-paypal

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
beancount_paypal/: __init__.py  lang.py
tests/: conftest.py  test_e2e.py  test_paypal_importer.py  utils.py
tests/golden/test_e2e/test_e2e_english_paypal_import/: output.beancount
tests/golden/test_e2e/test_e2e_german_paypal_import/: output.beancount
tests/testdata/test_e2e/test_e2e_english_paypal_import/: input.csv
tests/testdata/test_e2e/test_e2e_german_paypal_import/: input.csv
