[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beancount-paypal"
version = "0.1.0"
description = "Beancount Importer for PayPal CSV exports"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nils Werner", email = "nils@hey.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "beancount",
]
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/nils-werner/beancount-paypal"

[tool.hatch.build.targets.wheel]
packages = ["beancount_paypal"]

[tool.uv]
dev-dependencies = []