[metadata]
name = beancount-paypal
version = 0.2.7
description = Beancount Importer for PayPal CSV exports
long_description = file: README.md
long_description_content_type = text/markdown
author = Nils Werner
author_email = nils@hey.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 1 - Alpha
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
project_urls =
    Source = https://github.com/nils-werner/beancount-paypal

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    beancount

[bdist_wheel]
universal = 1
